--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -114,12 +114,16 @@
                             <!--                    TASK TITLE, BADGE, AND DROP-DOWN START -->
                             <div class="accordion-header">
                                 <button class="accordion-button d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
+                                    <span class="w-50">
                                         <span th:text="${task.title}"></span>
+                                    </span>
+                                    <span class="w-50 text-end">
                                         <span th:if="${!#strings.contains(task.dateScheduled, '1969') && !#strings.contains(task.dateScheduled, '1970')}" class="badge bg-info rounded pill">Target Date:
                                             <span th:text="${#strings.substring(task.dateScheduled, 5,7)}"></span>/
                                             <span th:text="${#strings.substring(task.dateScheduled, 8)}"></span>/
                                             <span th:text="${#strings.substring(task.dateScheduled, 0,4)}"></span>
                                         </span>
+                                    </span>
                                 </button>
 
                             </div>
@@ -189,8 +193,12 @@
                             <!--                    TASK TITLE, BADGE, AND DROP-DOWN START -->
                             <div class="accordion-header">
                                 <button class="accordion-button d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
-                                    <span th:text="${task.title}"></span>
-                                    <span th:if="${task.complete}" class="badge bg-success rounded-pill">Complete</span>
+                                    <span class="w-50">
+                                        <span th:text="${task.title}"></span>
+                                    </span>
+                                    <span class="w-50 text-end">
+                                        <span th:if="${task.complete}" class="badge bg-success rounded pill">Complete</span>
+                                    </span>
                                 </button>
 
                             </div>
