--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -113,7 +113,7 @@
                         <div class="accordion-item">
                             <!--                    TASK TITLE, BADGE, AND DROP-DOWN START -->
                             <div class="accordion-header">
-                                <button class="accordion-button d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
+                                <button class="accordion-button d-flex justify-content-between align-items-center collapsed" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
                                     <span class="w-50">
                                         <span th:text="${task.title}"></span>
                                     </span>
@@ -192,7 +192,7 @@
                         <div class="accordion-item">
                             <!--                    TASK TITLE, BADGE, AND DROP-DOWN START -->
                             <div class="accordion-header">
-                                <button class="accordion-button d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
+                                <button class="accordion-button d-flex justify-content-between align-items-center collapsed" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapse' + ${task.id}" aria-expanded="true" aria-controls="collapseOne">
                                     <span class="w-50">
                                         <span th:text="${task.title}"></span>
                                     </span>
