removed individual complete badge on completed tasks

--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -197,7 +197,7 @@
                                         <span th:text="${task.title}"></span>
                                     </span>
                                     <span class="w-50 text-end">
-                                        <span th:if="${task.complete}" class="badge bg-success rounded pill">Complete</span>
+<!--                                        <span th:if="${task.complete}" class="badge bg-success rounded pill">Complete</span>-->
                                     </span>
                                 </button>
 
