task-create js moved to checkbox.js

--- a/src/main/resources/templates/task/task-create.html
+++ b/src/main/resources/templates/task/task-create.html
@@ -58,22 +58,10 @@
 
 <th:block th:replace="partials/partials :: scripts"></th:block>
 
-<script>
+<script th:src="@{/js/checkbox.js}"></script>
 
-    const scheduleCheckbox = document.querySelector("#scheduleCheckbox");
-    const dateScheduledField = document.querySelector("#dateScheduledField");
-    const dateScheduleCal = document.querySelector("#dateScheduled");
+<!--<script>-->
 
-    scheduleCheckbox.addEventListener("change", function() {
-        if (scheduleCheckbox.checked) {
-            dateScheduledField.style.display = "block";
-            dateScheduleCal.value = new Date().toISOString().substring(0, 10);
-        } else {
-            dateScheduledField.style.display = "none";
-            dateScheduleCal.value = "1969-12-31";
-        }
-    });
-
-</script>
+<!--</script>-->
 </body>
 </html>
