--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="/login"><button class="btn-link btn btn-sm">Login</button></a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <form th:action="@{/logout}" th:method="post">
+                    <form th:action="@{/logout}" th:method="post" class="py-2">
                         <button class="btn-link btn btn-sm">Logout</button>
                     </form>
                 </li>
