--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div id="wrapper">
-    <nav th:replace="partials/partials :: nav"></nav>
+    <div th:replace="partials/partials :: nav"></div>
     <header th:replace="partials/partials :: header('Task-Hub')"></header>
 
     <main class="container">
@@ -18,58 +18,58 @@
             Unable to change email, email already exists.
         </div>
 
-<!--        NEW Offcanvas start -->
-        <div>
-<!--            <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">-->
-<!--            <p th:text="${user.getUsername()}" id="user-usernameDisplay"></p>-->
+<!--&lt;!&ndash;        NEW Offcanvas start &ndash;&gt;-->
+<!--        <div>-->
+<!--&lt;!&ndash;            <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">&ndash;&gt;-->
+<!--&lt;!&ndash;            <p th:text="${user.getUsername()}" id="user-usernameDisplay"></p>&ndash;&gt;-->
 
-            <!--            Offcanvas START-->
-<!--            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" id="editProfileBtn">-->
-<!--                Edit Profile-->
-<!--            </button>-->
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+<!--            &lt;!&ndash;            Offcanvas START&ndash;&gt;-->
+<!--&lt;!&ndash;            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" id="editProfileBtn">&ndash;&gt;-->
+<!--&lt;!&ndash;                Edit Profile&ndash;&gt;-->
+<!--&lt;!&ndash;            </button>&ndash;&gt;-->
+<!--            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">-->
 
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Profile</h5>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
+<!--                <div class="offcanvas-header">-->
+<!--                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Profile</h5>-->
+<!--                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>-->
+<!--                </div>-->
 
-                <div class="offcanvas-body">
-                    <div>
-                        <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">
-                        <p th:text="${user.getUsername()}"></p>
-                    </div>
-                    <hr>
-                    <form th:action="@{|/profile/edit/${user.id}|}" method="POST" th:object="${user}" id="profile-edit-form">
-                        <div class="form-group mb-3">
-                            <label for="firstname-edit">First name</label>
-                            <input id="firstname-edit" th:field="*{firstName}" class="form-control" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="lastname-edit">Last name</label>
-                            <input id="lastname-edit" th:field="*{lastName}" class="form-control" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="username-edit">user-name</label>
-                            <input id="username-edit" th:field="*{username}" class="form-control" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="email-edit">Email</label>
-                            <input id="email-edit" th:field="*{email}" class="form-control" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-sm" id="update-profileBtn">Submit updated fields</button>
-                        <br><span>Log in required after submittal</span>
-                    </form>
-                    <hr>
-                    <div class="py-3">
-                        <button type="button" id="file-stack-picBtn" class="btn btn-primary btn-sm">Choose profile picture</button>
-                        <button type="button" id="default-picBtn" class="btn btn-primary btn-sm" style="display: none;">Delete profile picture</button>
+<!--                <div class="offcanvas-body">-->
+<!--                    <div>-->
+<!--                        <img th:src="${user.getProfilePic()}" alt="profile_pic" id="profile-pic-img">-->
+<!--                        <p th:text="${user.getUsername()}"></p>-->
+<!--                    </div>-->
+<!--                    <hr>-->
+<!--                    <form th:action="@{|/profile/edit/${user.id}|}" method="POST" th:object="${user}" id="profile-edit-form">-->
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="firstname-edit">First name</label>-->
+<!--                            <input id="firstname-edit" th:field="*{firstName}" class="form-control" required>-->
+<!--                        </div>-->
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="lastname-edit">Last name</label>-->
+<!--                            <input id="lastname-edit" th:field="*{lastName}" class="form-control" required>-->
+<!--                        </div>-->
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="username-edit">user-name</label>-->
+<!--                            <input id="username-edit" th:field="*{username}" class="form-control" required>-->
+<!--                        </div>-->
+<!--                        <div class="form-group mb-3">-->
+<!--                            <label for="email-edit">Email</label>-->
+<!--                            <input id="email-edit" th:field="*{email}" class="form-control" required>-->
+<!--                        </div>-->
+<!--                        <button type="submit" class="btn btn-primary btn-sm" id="update-profileBtn">Submit updated fields</button>-->
+<!--                        <br><span>Log in required after submittal</span>-->
+<!--                    </form>-->
+<!--                    <hr>-->
+<!--                    <div class="py-3">-->
+<!--                        <button type="button" id="file-stack-picBtn" class="btn btn-primary btn-sm">Choose profile picture</button>-->
+<!--                        <button type="button" id="default-picBtn" class="btn btn-primary btn-sm" style="display: none;">Delete profile picture</button>-->
 
-                    </div>
-                </div>
-            </div>
-        </div>
-<!--            Offcanvas END-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--&lt;!&ndash;            Offcanvas END&ndash;&gt;-->
 
 
 <!--        ROW START -->
@@ -345,7 +345,7 @@
 <th:block th:replace="partials/partials :: scripts"></th:block>
 
 <script th:src="@{js/taskModalConfirmations.js}"></script>
-<script th:src="@{js/file-picker.js}"></script>
+<!--<script th:src="@{js/file-picker.js}"></script>-->
 <script th:src="@{js/anchorMagic.js}"></script>
 
 </body>
