--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -4,7 +4,7 @@
 <body>
 
 <div id="wrapper">
-  <nav th:replace="partials/partials :: nav"></nav>
+  <div th:replace="partials/partials :: nav"></div>
   <header th:replace="partials/partials :: header('Task-Revise')"></header>
 
   <main class="container">
