--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -5,7 +5,7 @@
 <body>
 
 <div id="wrapper">
-    <nav th:replace="partials/partials :: nav"></nav>
+    <div th:replace="partials/partials :: nav"></div>
     <header th:replace="partials/partials :: header('login')"></header>
 
     <main class="container">
