--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <title th:text="${'Task Manager | ' + title}"></title>
-    <script th:src="@{js/keys.js}"></script>
+    <script type="text/javascript" th:src="@{/keys.js}"></script>
     <meta name="_csrf" data-th-content="${_csrf.token}" />
     <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
     <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
