done updating depricated-partials

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/partials :: head('Home')"></head>
+<head th:replace="~{partials/partials :: head('Home')}"></head>
 <body>
 
 <div id="wrapper">
-    <div th:replace="partials/partials :: nav"></div>
-    <header th:replace="partials/partials :: header('Home')"></header>
+    <div th:replace="~{partials/partials :: nav}"></div>
+    <header th:replace="~{partials/partials :: header('Home')}"></header>
 
     <main class="container">
         <h1>Welcome to Task Manager</h1>
     </main>
 
-    <footer th:replace="partials/partials :: footer"></footer>
+    <footer th:replace="~{partials/partials :: footer}"></footer>
 </div>
 
 
-<th:block th:replace="partials/partials :: scripts"></th:block>
+<th:block th:replace="~{partials/partials :: scripts}"></th:block>
 
 </body>
 </html>
