--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/partials :: head('Task Hub')">
+<head th:replace="~{partials/partials :: head(title= 'Task Hub')}">
 
 </head>
 <body>
 
 <div id="wrapper">
-    <div th:replace="partials/partials :: nav"></div>
-    <header th:replace="partials/partials :: header('Task-Hub')"></header>
+    <div th:replace="~{partials/partials :: nav}"></div>
+    <header th:replace="~{partials/partials :: header('Task-Hub')}"></header>
 
     <main class="container">
 
@@ -285,11 +285,11 @@
     <!--  INCOMPLETE CONFIRMATION MODAL -->
 
 
-    <footer th:replace="partials/partials :: footer"></footer>
+    <footer th:replace="~{partials/partials :: footer}"></footer>
 </div>
 
 
-<th:block th:replace="partials/partials :: scripts"></th:block>
+<th:block th:replace="~{partials/partials :: scripts}"></th:block>
 
 <script th:src="@{js/taskModalConfirmations.js}"></script>
 <!--<script th:src="@{js/file-picker.js}"></script>-->
