--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/partials :: head('login')"></head>
+<head th:replace="~{partials/partials :: head('login')}"></head>
 
 <body>
 
 <div id="wrapper">
-    <div th:replace="partials/partials :: nav"></div>
-    <header th:replace="partials/partials :: header('login')"></header>
+    <div th:replace="~{partials/partials :: nav}"></div>
+    <header th:replace="~{partials/partials :: header('login')}"></header>
 
     <main class="container">
         <div th:if="${param.error}">
@@ -39,10 +39,10 @@
 
     </main>
 
-    <footer th:replace="partials/partials :: footer"></footer>
+    <footer th:replace="~{partials/partials :: footer}"></footer>
 </div>
 
-<th:block th:replace="partials/partials :: scripts"></th:block>
+<th:block th:replace="~{partials/partials :: scripts}"></th:block>
 
 </body>
 </html>
