--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,9 +8,17 @@
     flex-grow: 1;
 }
 
-img {
+#profile-pic-img {
     max-width: 150px;
     max-height: 150px;
     width: auto;
     height: auto;
+}
+
+.landing-page-images {
+    max-width: 480px;
+    max-height: 480px;
+    width: auto;
+    height: auto;
+    display: block;
 }
